# gitlab-due-sync

./: .gitignore  README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
gitlab_due_sync/: gitlab_due_sync_stack.py
src/: handler_auth.py  handler_main.py  pyproject.toml  requirements.txt
tests/unit/: test_gitlab_due_sync_stack.py
